Fix alignment of banner

--- a/src/components/image-banner/image-banner.module.scss
+++ b/src/components/image-banner/image-banner.module.scss
@@ -47,7 +47,7 @@
   :global(.gatsby-image-wrapper) {
     height: 60vh;
 
-    @media (min-width: 768) {
+    @media (min-width: 768px) {
       height: auto;
     }
   }
